# DebateOL_Client

./: .gitignore  CMakeLists.txt  DebateOL_Client.rar  README.md  ckernel.cpp  ckernel.h  config.h  dialog.cpp  dialog.h  g.711  main.cpp  resource.qrc  tttmp.cpp  world.h
LoginDialog/: logindialog.cpp  logindialog.h  logindialog.ui
Room_main/: room_main.cpp  room_main.h
Video/: common.h  videoread.cpp
Videoapi/: common.h  videoapi.pri  videoread.h
WeChatDialog/: wechatdialog.cpp  wechatdialog.h  wechatdialog.ui
camera/: camera.cpp  camera.h
camera2/: CMakeLists.txt  camera.cpp  camera.h  camera.ui  main.cpp
dal/: dal_config.cpp  dal_config.h  dal_room.cpp  dal_room.h  dal_user.cpp  dal_user.h
idls/: room.thrift
mainwindow/: mainwindow.cpp
pkg/Audio/: Audio.cpp  Audio.h  audiodeal.cpp  audiodeal.h
pkg/Camera/: camera.cpp  camera.h
pkg/JWT/: jwt.cpp  jwt.h  secret.h
pkg/JsonChange/: jsonchange.cpp  jsonchange.h
pkg/LoginDialog/: logindialog.cpp  logindialog.h
pkg/Openssl/: openssl.cpp  openssl.h
pkg/QT_Multiple_info/: QT_Multiple_info.cpp  QT_Multiple_info.h
pkg/Video/: common.h  video_config.h  videodeal.cpp  videodeal.h  videoread.cpp  videoread.h
pkg/WeChatDialog/: wechatdialog.ui
pkg/audioread/: audioread.cpp  audioread.h
pkg/audiowrite/: audiowrite.cpp  audiowrite.h
pkg/thrift_json/: thrift_json_audio.cpp  thrift_json_config.cpp  thrift_json_config.h  thrift_json_echo.cpp  thrift_json_room.cpp  thrift_json_user.cpp  thrift_json_video.cpp
pkg/web/: web.cpp  web.h
tool/gen_json/: .gitignore  gen-code1.txt  gen-code2.txt  readme.md  room.thrift  thrift-make_json_struct.cpp  user.thrift
ui/: camera.ui  mainwindow.ui  room_main.ui
web/: web.cpp  web.h
